# antsProject

./: .gitignore  README.md
include/: example.h
src/: main.cpp
static/: consts.cpp
visual_ants/projectAnts/projectAnts/: .gitignore  CMakeLists.txt  ant.cpp  ant.h  anthill.cpp  anthill.h  baby.cpp  baby.h  babysitter.cpp  babysitter.h  builder.cpp  builder.h  cleaner.cpp  cleaner.h  collector.cpp  collector.h  consts.h  dead.cpp  dead.h  draw.h  enemy.cpp  enemy.h  event_system.cpp  event_system.h  food.cpp  food.h  hay.cpp  hay.h  main.cpp  projectAnts.vcxproj  projectAnts.vcxproj.filters  resourses.cpp  resourses.h  role.h  soldier.cpp  soldier.h  stepherd.cpp  stepherd.h  storage.cpp  storage.h  (+2 more)
